# writ-plugin

./: .gitignore  KindDefaults.cabal  KindDefaults.hs  README.md  cabal.project  grit-plugin.cabal  kind-default-plugin.cabal  out  sacred-plugin.cabal  writ-plugin.cabal  writ-plugin.nix
GRIT/: Configure.hs  Plugin.hs
Kind/: Default.hs
Kind/Default/: Plugin.hs
KindDefaults/: Plugin.hs
SACRED/: Configure.hs  Plugin.hs
Test/: Test.cabal  Test.hs
TestDyn/: Test.cabal  Test.hs
TestIFC/: Test.cabal  Test.hs
TestSyn/: Test.cabal  Test.hs
TestVec/: Test.cabal  Test.hs
WRIT/: Configure.hs  Plugin.hs
