name: KindDefaults
cabal-version: >= 1.24
build-type: Simple
version: 1.0.0

library
  default-language: Haskell2010
  build-depends: base, ghc
  exposed-modules:
    KindDefaults.Plugin,
    KindDefaults

Source-repository head
  Type:     git
  Location: https://github.com/tritlo/kindle-default-plugin.git
