name: sacred-plugin
cabal-version: >= 1.24
build-type: Simple
version: 1.0.0
synopsis: A plugin that turns phantom type errors into warnings
license: MIT
license-file: LICENSE

library
  default-language: Haskell2010
  build-depends: base >= 4 && < 5,
                 ghc >= 8 && < 9
  exposed-modules:
    SACRED.Plugin,
    SACRED.Configure

Source-repository head
  Type:     git
  Location: https://github.com/tritlo/kindle-default-plugin.git
