name: writ-plugin
cabal-version: 1.24
build-type: Simple
version: 0.0.1
author: Matthías Páll Gissurarson
maintainer: mpg@mpg.is
synopsis: Weakly type programs with runtime-irrelevant types
description:

   The WRIT plugin allows somewhat automatic coercion of representationally
   equivalent domains. By parametrizing the plugin with the Discharge, Ignore,
   Default, and Promote families, library authors can extend the type system
   of GHC to treat representationally equivalent data as nominally equivalent.

category: Compiler Plugin
license: MIT
license-file: LICENSE

library
  default-language: Haskell2010
  build-depends: base >= 4 && < 5,
                 ghc >= 8 && < 9,
                 containers >= 0.6 && < 0.7
  exposed-modules:
    WRIT.Plugin,
    WRIT.Configure

Source-repository head
  Type:     git
  Location: https://github.com/tritlo/writ-plugin.git
